language/move-prover/tests/sources/regression/Escape.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold

    ┌── tests/sources/regression/Escape.move:50:9 ───
    │
 50 │         invariant module forall addr: address where exists<Wrapper<IndoorThing>>(addr): addr == 0x123;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/regression/Escape.move:12: initialize
    =         account = <redacted>
    =     at tests/sources/regression/Escape.move:13: initialize
    =         owner = <redacted>
    =     at tests/sources/regression/Escape.move:14: initialize
    =         <redacted> = <redacted>
    =     at tests/sources/regression/Escape.move:16: initialize
    =     at tests/sources/regression/Escape.move:17: initialize
    =     at tests/sources/regression/Escape.move:50

error: post-condition does not hold

    ┌── tests/sources/regression/Escape.move:50:9 ───
    │
 50 │         invariant module forall addr: address where exists<Wrapper<IndoorThing>>(addr): addr == 0x123;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/regression/Escape.move:24: install
    =         account = <redacted>
    =         thing = <redacted>
    =     at tests/sources/regression/Escape.move:25: install
    =     at tests/sources/regression/Escape.move:26: install
    =     at tests/sources/regression/Escape.move:50

error: post-condition does not hold

    ┌── tests/sources/regression/Escape.move:50:9 ───
    │
 50 │         invariant module forall addr: address where exists<Wrapper<IndoorThing>>(addr): addr == 0x123;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/regression/Escape.move:20: new_outdoor_thing
    =         result = <redacted>
    =     at tests/sources/regression/Escape.move:21: new_outdoor_thing
    =     at tests/sources/regression/Escape.move:50
